Added put and delete routes
